# oboyu

./: .coverage.Air.local.51282.XsXMfKOx  .dockerignore  .gitignore  .pre-commit-config.yaml  .repomixignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_REVIEW_SUMMARY.md  Dockerfile.test  LICENSE.md  PDF_INVESTIGATION_SUMMARY.md  PDF_PERFORMANCE_ANALYSIS.md  README.md  check-before-merge.md  docker-compose.test.yml  e2e_enhanced_report.md  final_performance_test.py  index.db  performance_analysis.py  performance_analysis_fixed.py  performance_comparison.py  pyproject.toml  repomix.config.json  test.db  test_llama_performance.py  validate_installations.py
.claude/: settings.json
.claude/commands/: check-before-merge.md  fix-bug-critical.md  fix-bug.md  release-a.md  solve-issue.md
.claude/scripts/: cleanup-issue-worktree.sh  fix-common-issues.sh  monitor-pr-checks.sh  run-affected-tests.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.yml  feature_request.yml  japanese_processing.yml  mcp_integration.yml  performance.yml
.github/workflows/: deploy-docs.yml  pr-validation.yml  pre-merge.yml  prerelease.yml  release.yml  test-installation.yml  test-pypi.yml
bench/: README.md  __init__.py  analyze.py  benchmark_indexing.py  benchmark_rag_accuracy.py  benchmark_reranking.py  benchmark_runner.py  benchmark_search.py  config.py  generate_queries.py  generate_test_data.py  logger.py  quick_bench.py  reporter.py  results.py  run_benchmarks.py  run_speed_benchmark.py  runner.py  utils.py
bench/accuracy/: __init__.py  benchmark_rag_accuracy.py
bench/config/: rag_eval_config.yaml
bench/core/: __init__.py  benchmark_base.py  metrics.py
bench/datasets/: __init__.py  dataset_manager.py  downloaders.py
bench/metrics/: __init__.py  reranking_metrics.py  retrieval_metrics.py  system_metrics.py
bench/rag_accuracy/: metrics_calculator.py  rag_evaluator.py  reranker_evaluator.py  results_analyzer.py
bench/reports/: __init__.py  formatters.py  report_generator.py  visualizations.py
bench/reranker/: __init__.py  benchmark_reranking.py
bench/speed/: __init__.py  analyze.py  benchmark_indexing.py  benchmark_search.py  generate_queries.py  generate_test_data.py  reporter.py  results.py  run_speed_benchmark.py  runner.py
docs/: _config.yml  architecture.md  cli.md  configuration.md  crawler.md  development.md  docusaurus.config.ts  e2e_display_testing.md  immutable-configuration-migration.md  index.md  indexer.md  installation-testing.md  intro.md  japanese.md  mcp_server.md  package-lock.json  pre-commit-optimization.md  query-example.md  query_engine.md  quickstart.md  release-process.md  reranker.md  sidebars.ts  test.txt  troubleshooting.md
docs/assets/: demo.tape
docs/basic-usage/: basic-workflow.md  document-types.md  search-patterns.md
docs/configuration-optimization/: configuration.md  indexing-strategies.md  performance-tuning.md  search-optimization.md
docs/for-developers/: architecture-intro.md  architecture.md  ci-cd-optimization.md  cli.md  contributors-intro.md  e2e_display_testing.md  immutable-configuration-migration.md  indexer.md  installation-testing-readme.md  installation-troubleshooting.md  japanese.md  mcp_server.md  pre-commit-optimization.md  pre-merge-checklist.md  quickstart.md  release-process.md  reranker.md
docs/getting-started/: first-index.md  first-search.md  installation.md
docs/integration/: automation.md  cli-workflows.md
docs/integration-automation/: automation.md  cli-workflows.md  mcp-integration.md
docs/real-world-scenarios/: personal-notes.md
docs/reference/: configuration.md
docs/reference-troubleshooting/: cli-reference.md  japanese-support.md  troubleshooting.md
docs/technology-stack/: decision-framework.md  duckdb.md  graphrag.md  huggingface.md  index.md  onnx.md
docs/troubleshooting/: troubleshooting.md
docs/usage-examples/: document-types.md  search-patterns.md
docs/use-cases/: csv-enrichment.md  github-issues-search.md  meeting-notes.md  nikkei225-securities-reports.md  personal-notes.md  research-papers.md  technical-docs.md
e2e/: README.md  __init__.py  display_tester.py  e2e_enhanced_report.md  e2e_simple_report.md  run_enhanced_tests.py  run_tests.py  ttyd_integrated_tester.py  visual_validation.py
scripts/: README.md  verify-cli-help.sh
scripts/ci/: monitor-pr-checks.sh  run-affected-tests.sh
scripts/dev/: cleanup-bug-worktree.sh  fix-common-issues.sh
src/oboyu/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  performance_test_db.py  test_installation_validation.py  test_oboyu.py  test_wheel_content_validation.py
tests/bench/: __init__.py  test_benchmark_runner.py  test_dataset_manager.py  test_metrics.py
tests/cli/: __init__.py  test_clear.py  test_config.py  test_enrich.py  test_hierarchical_logger.py  test_index.py  test_index_manage.py  test_main.py  test_mcp.py  test_mcp_service.py  test_progress.py  test_query.py  test_query_service.py  test_services.py  test_utils.py
tests/common/: __init__.py  test_circuit_breaker.py  test_config_schema.py  test_fallback_embedding_service.py  test_huggingface_utils.py  test_model_manager.py
tests/config/: __init__.py  test_base.py  test_enrichment_schema.py  test_immutable_configuration.py  test_schema.py
tests/contracts/: README.md  __init__.py  in_memory_search_repository.py  search_repository_contract.py  test_manual_validation.py  test_search_repository_contracts.py  test_simple_validation.py
tests/crawler/: __init__.py  test_config.py  test_crawler.py  test_discovery.py  test_extractor.py  test_japanese.py
tests/events/: __init__.py  test_event_bus.py  test_events.py
tests/indexer/: __init__.py  test_batch_processing.py  test_bm25_indexer.py  test_bm25_search.py  test_bm25_statistics_calculator.py  test_change_detector.py  test_config.py  test_context_provider.py  test_database.py  test_embedding.py  test_embedding_prefix_handler.py  test_file_metadata_schema.py  (+18 more)
website/: docusaurus.config.ts  sidebars.ts
(+499 files in other folders)
